RESOLVED FIXED229619
[GStreamer] Fix deadlock tearing down pipeline when using fallback sink
https://bugs.webkit.org/show_bug.cgi?id=229619
Summary [GStreamer] Fix deadlock tearing down pipeline when using fallback sink
Thibault Saunier
Reported 2021-08-27 11:36:01 PDT
[GStreamer] Fix deadlock tearing down pipeline when using fallback sink
Attachments
Patch (1.80 KB, patch)
2021-08-27 11:37 PDT, Thibault Saunier
no flags
Patch (1.79 KB, patch)
2021-08-27 11:53 PDT, Thibault Saunier
no flags
Patch (1.79 KB, patch)
2021-08-28 09:05 PDT, Thibault Saunier
no flags
Thibault Saunier
Comment 1 2021-08-27 11:37:56 PDT
Thibault Saunier
Comment 2 2021-08-27 11:53:42 PDT
Xabier Rodríguez Calvar
Comment 3 2021-08-28 08:42:33 PDT
Comment on attachment 436651 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=436651&action=review > Source/WebCore/ChangeLog:8 > + Whenever GstGL is disable for whatever reason the fallback sink might disabled
Thibault Saunier
Comment 4 2021-08-28 09:05:54 PDT
EWS
Comment 5 2021-08-31 15:50:53 PDT
Committed r281827 (241161@main): <https://commits.webkit.org/241161@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 436715 [details].
Radar WebKit Bug Importer
Comment 6 2021-08-31 15:51:20 PDT
Philippe Normand
Comment 8 2024-08-28 02:25:01 PDT
This issue was about the linux ports, not Apple platforms. Please open a new bug.
Note You need to log in before you can comment on or make changes to this bug.