[GStreamer] Fix deadlock tearing down pipeline when using fallback sink https://bugs.webkit.org/show_bug.cgi?id=229619

Patch by Thibault Saunier <tsaunier@igalia.com> on 2021-08-31
Reviewed by Xabier Rodriguez-Calvar.

Whenever GstGL is disabled for whatever reason the fallback sink might
be used and cancelling repaint need to be taken into account in any case.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::cancelRepaint):

Canonical link: https://commits.webkit.org/241161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281827 268f45cc-cd09-0410-ab3c-d52691b4dbfc